<resources>
    <string name="app_name">Hamba</string>
    <string name="copyrights_notice">Copyright © 2019 Hamba. All Rights Reserved</string>

    <!--User Module Content-->
    <string name="email_hint">Email / +971xxxx</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="continue_as_a_guest">
        <u>Continue As a Guest</u>
    </string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_hamba">Welcome to Hamba</string>
    <string name="join_us_as">Join us as</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="enter_mobile_number">Enter mobile no</string>
    <string name="login_with_gmail">Login with gmail</string>
    <string name="enter_code">ENTER CODE</string>
    <string name="code_instructions_email_and_number">We\'ve sent you code on registered number and email. To verify
        your number and email please enter 6-digit code
    </string>
    <string name="code_instructions_email">We\'ve sent you code on registered email. To verify your email please enter
        6-digit code
    </string>
    <string name="code_instructions_number">We\'ve sent you code on registered number. To verify your number please
        enter 6-digit code
    </string>
    <string name="enter_code_for_email">Enter 6-digit code for email</string>
    <string name="enter_code_for_number">Enter 6-digit code for number</string>
    <string name="problem_receiving_a_code">
        <u>PROBLEM RECEIVING A CODE?</u>
    </string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="what">What</string>
    <string name="is_your_good_name">is your good name?</string>
    <string name="enter">Enter</string>
    <string name="its_okay">It\'s okay!</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="continue_">Continue</string>
    <string name="code_instructions">we have sent you six digit code</string>
    <string name="on_your_email">on your email</string>
    <string name="send_me_again">
        <u>send me again</u>
    </string>
    <string name="enter_four_digit_code">Enter six digit code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="done">Done</string>
    <string name="your_password_has_reset">Your Password has reset successfully!</string>
    <string name="login_with_new_password">Login with new password</string>
    <string name="login">Login</string>
    <string name="business_employee_sign_up">Business Employee Signup</string>
    <string name="pre_shared_key">Pre Shared Key</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="business_name">Store/Business Name</string>
    <string name="email_address">Email Address</string>
    <string name="counter_text">%1$d/12</string>
    <string name="individual">INDIVIDUAL</string>
    <string name="employee">EMPLOYEE</string>
    <string name="session_not_available">Session not available!</string>

    <!--Dashboard Screen Content-->
    <string name="title_home">Home</string>
    <string name="nav_header_title">Steven Clarkson</string>
    <string name="nav_header_subtitle">Barista Coffee</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_order">Order</string>
    <string name="title_cart">Cart</string>
    <string name="title_chat">Chat</string>
    <string name="title_search">Search</string>
    <string name="title_favourite">Favourite</string>
    <string name="current_location">Detecting Current Location...</string>
    <string name="location_permission_rejected">Location Permission Rejected</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="gps_not_enabled">GPS Not Enabled</string>
    <string name="community">Community</string>
    <string name="discoveries">Discoveries</string>
    <string name="stores">Stores</string>
    <string name="wholesale">Wholesale</string>
    <string name="shops_in_mall">Shops in Mall</string>
    <string name="grocery">Grocery</string>
    <string name="restaurant">Restaurant</string>
    <string name="my_orders">My Orders</string>
    <string name="services">Services</string>
    <string name="professional">Professional</string>
    <string name="my_work">My Work</string>
    <string name="nearby_shops">Nearby Shops</string>
    <string name="shops_based_on_distance">Shops Based on Distance</string>
    <string name="offers">Offers</string>
    <string name="notifications">Notifications</string>
    <string name="wallet">Wallet</string>
    <string name="my_badges">My Badges</string>
    <string name="talk_to_eve">Talk To Eve</string>
    <string name="partners">Partners</string>
    <string name="complaints">Complaints</string>
    <string name="_30_complete">%1$s Complete</string>
    <string name="home_screen_banner">home screen banner</string>
    <string name="top_deals_offers">Top Deals/Offers</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="discovery_rules">Discovery Rules</string>
    <string name="account_settings">Account Settings</string>
    <string name="manage_book_address">Manage Book Address</string>
    <string name="special_offers">Special Offers</string>
    <string name="hamba_gold">Hamba Gold</string>
    <string name="sign_out">Sign Out</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="faqs">FAQ\'s</string>
    <string name="enable_gps_description">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="yes">Yes</string>
    <string name="call_or_email_us">Email or Call Us</string>

    <!--API Module Content-->
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="verify">Verify</string>
    <string name="sorry_something_went_wrong">Sorry something went wrong!</string>
    <string name="no_network_available">No Network Available</string>
    <string name="password_incorrect">Your cell number or password is incorrect.</string>
    <string name="please_enter_cell_number_or_email">Please Enter Cell Number or Email</string>
    <string name="please_enter_valid_cell_number">Please Enter valid Cell Number</string>
    <string name="please_enter_email">Please Enter Email Address</string>
    <string name="please_enter_valid_email">Please Enter Valid Email Address</string>
    <string name="please_enter_otp_code">Please Enter 6 Digit OTP Code</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_new_password">Please Enter New Password</string>
    <string name="please_confirm_password">Please Confirm Password</string>
    <string name="confirm_password_should_match_new_password">Confirm Password Should Match New Password</string>
    <string name="please_enter_pre_shared_key">Please Enter PreShared Key</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="please_enter_business_name">Please Enter Business Name</string>

    <!--User Profile Content-->
    <string name="edit_profile">Edit Profile</string>
    <string name="person_type">Person Type</string>
    <string name="select_person_type">Select Person Type</string>
    <string name="prefix">Prefix</string>
    <string name="select_prefix">Select Prefix</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="i_am">I am</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="identity">Identity</string>
    <string name="select_identity">Select Identity</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="type_phone_number">Type phone number</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="select_address_type">Select Address Type</string>
    <string name="enter_address">Enter Address</string>
    <string name="interests">Interests</string>
    <string name="select_interest">Select Interests</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="show_my_mobile_number">Show my mobile number</string>
    <string name="others_can_see_my_age">Others can see my age</string>
    <string name="save">Save</string>
    <string name="address_type">Address Type</string>
    <string name="please_select_date_of_birth">Please select date of birth</string>
    <string name="please_enter_passport_number">Please enter Passport Number</string>
    <string name="please_enter_national_id_number">Please enter National ID Number</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="action_unauthorized">Action Unauthorized</string>
    <string name="action_forbidden">Action Forbidden</string>
    <string name="not_found">Not Found</string>
    <string name="record_updated_successfully">Record Updated Successfully!!</string>
    <string name="please_select_valid_date">Please select valid date!!</string>
    <string name="you_are_signed_in_as_guest_please_login">You are signed in as a guest. Please login!</string>
    <string name="sorry_you_are_under_age">Sorry, You are under age!!</string>
    <string name="support_number">+971 52 170 7001</string>
    <string name="support_email">support@hamba.io</string>
    <string name="customer_support_required">Customer Support Required</string>
    <string name="mail_to">mailto:</string>
    <string name="tel">tel:</string>
</resources>
