<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_icon_selector"
            android:title="@string/title_home" />

    <item
            android:id="@+id/navigation_order"
            android:icon="@drawable/order_icon_selector"
            android:title="@string/title_order" />

    <item
            android:id="@+id/navigation_favourite"
            android:icon="@drawable/favorites_icon_selector"
            android:title="@string/title_favourite" />

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/search_icon_selector"
            android:title="@string/title_search" />

    <item
            android:id="@+id/navigation_chat"
            android:icon="@drawable/chat_icon_selector"
            android:title="@string/title_chat" />

</menu>
