<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forget_password_bg"
        tools:context=".features.forget_password.NewPasswordActivity">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:alpha="0.93"/>

    <ImageView
            android:id="@+id/imageView_forgetPasswordLogo2"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/forget_password_logo_2"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:id="@+id/textView_resetYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            android:layout_marginTop="@dimen/_20sdp"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_forgetPasswordLogo2"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:id="@+id/textView_codeInstructions1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_instructions"
            android:layout_marginTop="@dimen/_15sdp"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_resetYourPassword"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:id="@+id/textView_codeInstructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_your_email"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_codeInstructions1"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:id="@+id/textView_sendMeAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_me_again"
            android:layout_marginTop="@dimen/_10sdp"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_codeInstructions2"/>

    <com.hadiftech.hamba.core.views.HambaEditText
            style="@style/ForgetPasswordFieldStyle"
            android:id="@+id/editText_digitCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:inputType="numberDecimal"
            android:hint="@string/enter_four_digit_code"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/textView_sendMeAgain"/>

    <com.hadiftech.hamba.core.views.HambaEditText
            style="@style/ForgetPasswordFieldStyle"
            android:id="@+id/editText_newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/editText_digitCode"/>

    <com.hadiftech.hamba.core.views.HambaEditText
            style="@style/ForgetPasswordFieldStyle"
            android:id="@+id/editText_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/editText_newPassword"/>

    <com.hadiftech.hamba.core.views.HambaButton
            style="@style/ForgetPasswordButtonStyle"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/reset_password"
            android:layout_marginTop="@dimen/_25sdp"
            android:onClick="onPasswordClickedClicked"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_confirmPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>