<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_15sdp"
        android:background="@drawable/login_module_background"
        tools:context=".features.signup.BusinessSignUpActivity">

    <ImageView
            android:id="@+id/imageView_hambaLogo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/hamba_logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:id="@+id/textView_businessSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_employee_sign_up"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_hambaLogo"/>

    <com.hadiftech.hamba.core.views.HambaLoginEditText
            android:id="@+id/editText_preSharedKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/pre_shared_key"
            android:drawableRight="@drawable/help_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView_businessSignUp"
            app:showRightDrawable="true" />

    <LinearLayout
            android:id="@+id/linearLayout_userName"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_33sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/editText_preSharedKey">

        <com.hadiftech.hamba.core.views.HambaLoginEditText
                android:id="@+id/editText_firstName"
                android:layout_width="0dp"
                android:layout_weight="1.45"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />

        <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

        <com.hadiftech.hamba.core.views.HambaLoginEditText
                android:id="@+id/editText_lastName"
                android:layout_width="0dp"
                android:layout_weight="1.45"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />

    </LinearLayout>

    <com.hadiftech.hamba.core.views.HambaLoginEditText
            android:id="@+id/editText_businessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_name"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_userName" />

    <com.hadiftech.hamba.core.views.HambaLoginEditText
            android:id="@+id/editText_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/editText_businessName" />

    <com.hadiftech.hamba.core.views.HambaMobileNumberComponent
            android:id="@+id/businessSigUp_mobileNumberComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/editText_emailAddress" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginTop="@dimen/_7sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/businessSigUp_mobileNumberComponent" >

        <com.hadiftech.hamba.core.views.HambaEditText
                style="@style/SignUpFieldsStyle"
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_10sdp"
                app:fontType="Light" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.hadiftech.hamba.core.views.HambaButton
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/sign_up"
            android:layout_marginHorizontal="@dimen/_55sdp"
            android:onClick="onSignUpButtonClicked"
            app:fontType="Regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>