<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout_navHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/side_nav_bar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
            android:id="@+id/imageView_userPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_user_white" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_toRightOf="@+id/imageView_userPhoto"
            android:orientation="vertical">

        <com.hadiftech.hamba.core.views.HambaTextView
                android:id="@+id/textView_userName"
                style="@style/NavigationHeaderTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_title" />

        <com.hadiftech.hamba.core.views.HambaTextView
                android:id="@+id/textView_subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle" />

    </LinearLayout>

</RelativeLayout>
