<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_module_background"
        android:padding="@dimen/_15sdp"
        tools:context=".features.login.LoginActivity">

    <ImageView
            android:id="@+id/imageView_hambaLogo"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:src="@drawable/hamba_logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.hadiftech.hamba.core.views.HambaEditText
            style="@style/LoginFieldsStyle"
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/imageView_hambaLogo"/>

    <com.hadiftech.hamba.core.views.HambaEditText
            style="@style/LoginFieldsStyle"
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/editText_email"/>

    <com.hadiftech.hamba.core.views.HambaButton
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_55sdp"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_as_a_guest"
            android:textColor="@color/colorGreenDark"
            android:textSize="@dimen/_16sdp"
            android:background="@color/colorGreenLight"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            app:fontType="Regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view" />

    <com.hadiftech.hamba.core.views.HambaTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colorWhite"
            app:fontType="Light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/hambaTextView2"/>

    <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/hambaTextView2"
            app:layout_constraintTop_toTopOf="@+id/hambaTextView2" android:id="@+id/view"/>

    <com.hadiftech.hamba.core.views.HambaTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colorWhite"
            android:onClick="onCreateAccountClicked"
            app:fontType="Light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/hambaTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>